# server/model/user.js
@@ -1,6 +1,6 @@
 module.exports = (sequelize, DataTypes) =>{
     return sequelize.define('user',{
-        userEmail:{
+        email:{
             type : DataTypes.STRING(100),
             allowNull : false,
             unique : true
